--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,6 @@
+:root {
+  --red:#FF4136;
+}
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -5,4 +8,17 @@ body {
 
 a {
   color: #00B7FF;
+}
+.row {
+  display: flex;
+}
+.flex-grow {
+  flex-grow:1;
+}
+.error {
+  background-color:#FF413644; 
+  padding: 5px;
+  color:var(--red);
+  border: 1px solid var(--red);
+  
 }
