--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,9 @@ block content
           
         input(name="url",value=url,class="flex-grow")
         button Send
+      h3 body
+      .row
+        textarea(class="flex-grow",name="data", rows="15")= request.data
   .output
     
 
